--- a/src/app/admin/addformatteur/addformatteur.component.html
+++ b/src/app/admin/addformatteur/addformatteur.component.html
@@ -22,30 +22,31 @@
                                 <div *ngIf="alert" class=" my-3  alert bg-success text-white alert-styled-left alert-dismissible">
 									<button type="button" class="close" data-dismiss="alert"><span>&times;</span></button>
 									<span class="font-weight-semibold">Well done!</span> ADD with success.
-							    </div>
+                                </div>
+                                
 
                                 <div *ngIf="alert1" class=" my-3  alert bg-danger text-white alert-styled-left alert-dismissible">
 									<button type="button" class="close" data-dismiss="alert"><span>&times;</span></button>
 									<span class="font-weight-semibold">Erreur!</span> Mail exist <a href="#" class="alert-link"></a>
 							    </div>
 
-
+                              <form  [formGroup]="angForm" novalidate>
                                 <div class="form-group form-group-feedback form-group-feedback-right">
-                                    <input type="text" class="form-control" [(ngModel)]="user.name" placeholder="Choose name">
-                                  
+                                    <input type="text" class="form-control" [(ngModel)]="user.name" required placeholder="Choose name">
+                                   
                                 </div>
 
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group form-group-feedback form-group-feedback-right">
-                                            <input type="text" class="form-control" [(ngModel)]="user.lastname" placeholder="last name">
+                                            <input type="text" class="form-control" [(ngModel)]="user.lastname" required placeholder="last name">
                                            
                                         </div>
                                     </div>
 
                                     <div class="col-md-6">
                                         <div class="form-group form-group-feedback form-group-feedback-right">
-                                            <input type="text" class="form-control" [(ngModel)]="user.email" placeholder="email">
+                                            <input type="email" class="form-control" [(ngModel)]="user.email" placeholder="email">
                                             
                                         </div>
                                     </div>
@@ -102,7 +103,7 @@
                                   
                                 </div>
 
-                            
+                            </form>
 
                                 <button (click)="register()" type="submit" class="btn bg-teal-400 btn-labeled btn-labeled-right"><b><i class="icon-plus3"></i></b> Create account</button>
                             </div>
@@ -111,7 +112,7 @@
                 </div>
             </div>
             <!-- /registration form -->
-
+        
         </div>
         <!-- /content area -->
 
