--- a/src/app/client/about-us/about-us.component.html
+++ b/src/app/client/about-us/about-us.component.html
@@ -1,19 +1,25 @@
+
+<app-heade></app-heade>
 <div class="about-area section-padding2">
+    
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-md-12">
                 <div class="about-caption mb-50">
                     <!-- Section Tittle -->
                     <div class="section-tittle mb-35">
-                        <span>More About Our Company</span>
+                        <span>More About Formevo</span>
                         <h2>Want to know more</h2>
                     </div>
-                    <p>There arge many variations ohf passages of sorem gpsum ilable, but the majority have suffered alteration in some form, by ected humour, or randomised words whi.</p>
+                    <p>Are you a business manager, training manager, human resources manager, employee of a company or student and you want to be part of your professional training or consulting projects? Our teams are at your disposal to organize your training plan and to answer all your practical questions regarding the management of your professional training and consulting needs:
+
+                     
+                        </p>
                     <ul>
-                        <li><span class="flaticon-business"></span> Creative ideas base</li>
-                        <li><span class="flaticon-communications-1"></span> Assages of sorem gpsum ilable</li>
-                        <li><span class="flaticon-graduated"></span> Have suffered alteration in so</li>
-                        <li><span class="flaticon-tools-and-utensils"></span> Randomised words whi</li>
+                        <li><span class="flaticon-business"></span> How to identify your training and consultancy needs?</li>
+                        <li><span class="flaticon-communications-1"></span>How to make training choices or identify consulting needs?</li>
+                        <li><span class="flaticon-graduated"></span>How to evaluate your vocational training and advice actions?</li>
+                        <li><span class="flaticon-tools-and-utensils"></span>How to benefit from reimbursements and subsidies for FormEvo professional training?</li>
                     </ul>
                  
                 </div>
@@ -32,3 +38,5 @@
         </div>
     </div>
 </div>
+
+<app-footer></app-footer>
