--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -1,21 +1,11 @@
-<div id="preloader-active">
-    <div class="preloader d-flex align-items-center justify-content-center">
-        <div class="preloader-inner position-relative">
-            <div class="preloader-circle"></div>
-            <div class="preloader-img pere-text">
-                <img src="assets/assets/img/formevo.png" alt="">
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Preloader Start -->
-<app-header-comp></app-header-comp>
+
+
 <main>
 
     <app-cover></app-cover>
 
     <!--? Categories Area Start -->
-    <div class="categories-area section-padding30">
+    <div class="categories-area">
         <div class="container">
             <div class="row justify-content-sm-center">
                 <div class="cl-xl-7 col-lg-8 col-md-10">
@@ -185,4 +175,3 @@
 
    
 
-<app-footer></app-footer>
