--- a/src/app/client/cover/cover.component.html
+++ b/src/app/client/cover/cover.component.html
@@ -7,16 +7,16 @@
                     <div class="row align-items-center">
                         <div class="col-xl-6 col-lg-7 col-md-8">
                             <div class="hero__caption">
-                                <span data-animation="fadeInLeft" data-delay=".2s">Popular Online Courses</span>
-                                <h1 data-animation="fadeInLeft" data-delay=".4s">The New Way To Learn Properly in With Us!</h1>
+                                <span>Popular Online Courses</span>
+                                <h1>The New Way To Learn Properly in With Us!</h1>
                                 <!-- Hero-btn -->
                                 <div class="hero__btn">
-                                    <a href="industries.html" class="btn hero-btn"  data-animation="fadeInLeft" data-delay=".8s">Get Started</a>
+                                    <a href="industries.html" class="btn hero-btn">Get Started</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-5">
-                            <div class="hero-man d-none d-lg-block f-right" data-animation="jello" data-delay=".4s">
+                            <div class="hero-man d-none d-lg-block f-right">
                                 <img src="assets/assets/img/hero/heroman.png" alt="">
                             </div>
                         </div>
