--- a/src/app/etudiant/list-formations/list-formations.component.html
+++ b/src/app/etudiant/list-formations/list-formations.component.html
@@ -9,10 +9,6 @@
 
         <!-- Inner container -->
         <div class="d-flex align-items-start flex-column flex-md-row">
-
-
-            
-        
             <!-- Left content -->
             <div class=" order-2 order-md-1" style="width: 900px;">
 
@@ -56,16 +52,19 @@
                                   
                                 </div>
                             </div>
+               
                         </div>
-                    </div>
+             </div> 
 
                   
-                </div>
+        </div>
 
            
+<app-footer></app-footer>
 
 
 
-            </div>
+        
+    </div>
             <!-- /left content -->
 
