--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -97,7 +97,7 @@
                                 <button (click)="register()" type="submit" class="btn bg-success btn-labeled btn-labeled-right"><b><i class="icon-plus3"></i></b> Create account</button>
                              
                                 <br>   
-                                <button type="submit" class="btn bg-success btn-labeled btn-labeled-right mt-2" routerLink="/login">Login </button>
+                                <button type="submit" class="btn bg-success btn-labeled btn-labeled-right mt-2" routerLink="">Login </button>
                               
                             </div>
                         </div>
