--- a/src/app/etudiant/detail-formations/detail-formations.component.html
+++ b/src/app/etudiant/detail-formations/detail-formations.component.html
@@ -1,3 +1,6 @@
+		
+		
+		
 		<!-- Main content -->
 		<div class="content-wrapper">
 
@@ -22,7 +25,7 @@
 
 							<div class="nav-tabs-responsive bg-light border-top">
 								<ul class="nav nav-tabs nav-tabs-bottom flex-nowrap mb-0">
-									<li class="nav-item"><a href="#course-overview" class="nav-link active" data-toggle="tab"><i class="icon-menu7 mr-2"></i> Overview</a></li>
+									<li class="nav-item"><a href="#course-overview" class="nav-link active" data-toggle="tab"><i class="icon-menu7 mr-2"></i> Détails</a></li>
 									</ul>
 							</div>
 
@@ -30,24 +33,24 @@
 								<div class="tab-pane fade show active" id="course-overview">
 									<div class="card-body">
 										<div class="mt-1 mb-4">
-											<h6 class="font-weight-semibold">Course overview</h6>
+											<h6 class="font-weight-semibold">Formation</h6>
                                             <p>{{formation?.description}}</p>
                                             
 
                                         
 
                                             <div *ngIf="voirCours">
-                                                <h6 class="font-weight-semibold">List des cours</h6>
+                                                <h6 class="font-weight-semibold">Liste des cours</h6>
                                                 <table class="table">
 
-                                                    <tr *ngFor="let c of cours">
+                                                    <tr *ngFor="let c of cours; ">
 
                                                         <td>
                                                             {{c?.titre}}
                                                         </td>
 
                                                         <td>
-                                                            <a class="btn btn-outline-primary" [href]="'http://127.0.0.1/portfolio/assets/cours/'+ c?.fichier" target="_blank"> Download cours </a>
+                                                            <a class="btn btn-outline-primary" [href]="'http://127.0.0.1/portfolio/assets/cours/'+ c?.fichier" target="_blank"> Télecharger cours </a>
                                                         </td>
                                                     </tr>
 
@@ -78,14 +81,14 @@
             <div class="tab-pane fade show active" id="course-overview">
                 <div class="card-body">
                     <div class="mt-1 mb-4">
-                        <h6 class="font-weight-semibold">Course discussion</h6>
+                        <h6 class="font-weight-semibold">Discussion</h6>
                        
                         
 
                     
                         <textarea [(ngModel)]="commentaire.commentaire" class="form-control" name="" id="" cols="30" rows="3" placeholder="comment..."></textarea>
 
-                        <button (click)="commenter()" class="btn btn-dark mt-2" style="float:right" >envoyer</button>
+                        <button (click)="commenter()" class="btn btn-success mt-2" style="float:right" >envoyer</button>
             
 
 
@@ -127,7 +130,7 @@
 							<!-- Course details -->
 							<div class="card">
 								<div class="card-header bg-transparent header-elements-inline">
-									<span class="text-uppercase font-size-sm font-weight-semibold">Course details</span>
+									<span class="text-uppercase font-size-sm font-weight-semibold">Evaluation</span>
 									<div class="header-elements">
 										<div class="list-icons">
 					                		<a class="list-icons-item" data-action="collapse"></a>
@@ -144,39 +147,7 @@
                                 <div class="card-body pb-0"  *ngFor="let q of tests; let i = index">
 									<a [routerLink]="['/etudiant/passertest' , q.id]" class="btn bg-teal-400 btn-block mb-2">Passer test {{i+1}}</a>
 								</div>
-								<table class="table table-borderless table-xs border-top-0 my-2">
-									<tbody>
-										<tr>
-											<td class="font-weight-semibold">Duration:</td>
-											<td class="text-right">{{formation?.duree}} hours</td>
-										</tr>
-									
-										<tr>
-											<td class="font-weight-semibold">Start date:</td>
-											<td class="text-right">{{formation?.date}}</td>
-										</tr>
-									
-									
-										<tr>
-											<td class="font-weight-semibold">Categorie:</td>
-											<td class="text-right"><a href="#">{{formation?.categorie}}</a></td>
-										</tr>
-										<tr>
-											<td class="font-weight-semibold">Attendees:</td>
-											<td class="text-right">382 people</td>
-										</tr>
-										<tr>
-											<td class="font-weight-semibold">Rating:</td>
-											<td class="text-right text-muted">
-												<i class="icon-star-full2 font-size-base text-warning-300"></i>
-												<i class="icon-star-full2 font-size-base text-warning-300"></i>
-												<i class="icon-star-full2 font-size-base text-warning-300"></i>
-												<i class="icon-star-full2 font-size-base text-warning-300"></i>
-												<i class="icon-star-full2 font-size-base text-warning-300"></i>
-											</td>
-										</tr>
-									</tbody>
-								</table>
+								
 							</div>
 							<!-- /course details -->
 
@@ -197,7 +168,58 @@
 
 					</div>
 					<!-- /right sidebar component -->
+	<div class="sidebar sidebar-light bg-transparent sidebar-component sidebar-component-right border-0 shadow-0 order-1 order-md-2 sidebar-expand-md">
 
+						<!-- Sidebar content -->
+						<div class="sidebar-content">
+
+							<!-- Course details -->
+							<div class="card">
+								<div class="card-header bg-transparent header-elements-inline">
+									<span class="text-uppercase font-size-sm font-weight-semibold">Plus de details</span>
+									<div class="header-elements">
+										<div class="list-icons">
+					                		<a class="list-icons-item" data-action="collapse"></a>
+				                		</div>
+			                		</div>
+								</div>
+
+	<table class="table table-borderless table-xs border-top-0 my-2">
+									<tbody>
+										<tr>
+											<td class="font-weight-semibold">Durée:</td>
+											<td class="text-right">{{formation?.duree}} h</td>
+										</tr>
+									
+										<tr>
+											<td class="font-weight-semibold">date:</td>
+											<td class="text-right">{{formation?.date}}</td>
+										</tr>
+									
+									
+										
+										
+										<tr>
+											<td class="font-weight-semibold">Avis:</td>
+											<td class="text-right text-muted">
+												<i class="icon-star-full2 font-size-base text-warning-300"></i>
+												<i class="icon-star-full2 font-size-base text-warning-300"></i>
+												<i class="icon-star-full2 font-size-base text-warning-300"></i>
+												<i class="icon-star-full2 font-size-base text-warning-300"></i>
+												<i class="icon-star-full2 font-size-base text-warning-300"></i>
+											</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+							<!-- /course details -->
+
+
+
+						</div>
+						<!-- /sidebar content -->
+
+					</div>
 				</div>
 				<!-- /inner container -->
 
