--- a/src/app/admin/sidenav/sidenav.component.html
+++ b/src/app/admin/sidenav/sidenav.component.html
@@ -34,7 +34,7 @@
                         </div>
 
                         <div class="ml-3 align-self-center">
-                            <a href="#" class="text-white"><i class="icon-cog3"></i></a>
+                            
                         </div>
                     </div>
                 </div>
@@ -49,23 +49,23 @@
                     <!-- Main -->
                    
                    
-                    <li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">Main</div> <i class="icon-menu" title="Main"></i></li>
+                    <li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">Administrateur</div> <i class="icon-menu" title="Main"></i></li>
                   
                    
                     <li class="nav-item">
                         <a routerLink="/board"  class="nav-link ">
                             <i class="icon-home4"></i>
                             <span>
-                                Dashboard
+                               Accueil
                             </span>
                         </a>
                     </li>
 
                     <li class="nav-item">
                         <a  routerLink="/board/gestionformateur" routerLinkActive="active" class="nav-link">
-                            <i class="icon-home4"></i>
+                            <i class="icon-user"></i>
                             <span>
-                                Gestion des formatteur
+                                Gestion des formateurs
                             </span>
                         </a>
                     </li>
@@ -73,7 +73,7 @@
 
                     <li class="nav-item">
                         <a  routerLink="/board/gestionetudiant" routerLinkActive="active" class="nav-link">
-                            <i class="icon-home4"></i>
+                            <i class="icon-pencil"></i>
                             <span>
                                 Gestion des etudiants
                             </span>
@@ -84,17 +84,17 @@
 
                     <li class="nav-item">
                         <a  routerLink="/board/gestioncategorie" routerLinkActive="active" class="nav-link">
-                            <i class="icon-home4"></i>
+                            <i class="icon-archive"></i>
                             <span>
                                    
-                              Gestion des categorie
+                              Gestion des categories
                             </span>
                         </a>
                     </li>
 
                     <li class="nav-item">
                         <a  routerLink="/board/gestionformation" routerLinkActive="active" class="nav-link">
-                            <i class="icon-home4"></i>
+                            <i class="icon-laptop"></i>
                             <span>
                                    
                               Gestion des formations
@@ -104,7 +104,7 @@
 
                     <li class="nav-item">
                         <a  routerLink="/board/gestioncours" routerLinkActive="active" class="nav-link">
-                            <i class="icon-home4"></i>
+                            <i class="icon-book"></i>
                             <span>
                                    
                               Gestion des cours
