--- a/src/app/admin/addformatteur/addformatteur.component.html
+++ b/src/app/admin/addformatteur/addformatteur.component.html
@@ -14,23 +14,23 @@
                         <div class="card mb-0">
                             <div class="card-body">
                                 <div class="text-center mb-3">
-                                    <h5 class="mb-0">Create New Formatteur</h5>
-                                    <span class="d-block text-muted">All fields are required</span>
+                                    <h5 class="mb-0">Nouveau Formateur</h5>
+                                    <span class="d-block text-muted">Tous les champs sont obligatoires</span>
                                 </div>
 
 
                                 <div *ngIf="alert" class=" my-3  alert bg-success text-white alert-styled-left alert-dismissible">
 									<button type="button" class="close" data-dismiss="alert"><span>&times;</span></button>
-									<span class="font-weight-semibold">Well done!</span> ADD with success.
+									<span class="font-weight-semibold">Enregistrement terminé!</span>nouveau formateur ajouté.
                                 </div>
                                 
 
                                 <div *ngIf="alert1" class=" my-3  alert bg-danger text-white alert-styled-left alert-dismissible">
 									<button type="button" class="close" data-dismiss="alert"><span>&times;</span></button>
-									<span class="font-weight-semibold">Erreur!</span> Mail exist <a href="#" class="alert-link"></a>
+									<span class="font-weight-semibold">Erreur!</span> EMail existe <a href="#" class="alert-link"></a>
 							    </div>
 
-                              <form  [formGroup]="angForm" novalidate>
+                     
                                 <div class="form-group form-group-feedback form-group-feedback-right">
                                     <input type="text" class="form-control" [(ngModel)]="user.name" required placeholder="Choose name">
                                    
@@ -103,7 +103,7 @@
                                   
                                 </div>
 
-                            </form>
+                            
 
                                 <button (click)="register()" type="submit" class="btn bg-teal-400 btn-labeled btn-labeled-right"><b><i class="icon-plus3"></i></b> Create account</button>
                             </div>
