--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 				<!-- Simple statistics -->
 				<div class="m-3">
 					<h6 class="mb-0 font-weight-semibold">
-						Simple stats
+						Statistique
 					</h6>
 				
 				</div>
